WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95717
DFG GetByVal for JSArrays shouldn't OSR exit every time that the index is out of bound
https://bugs.webkit.org/show_bug.cgi?id=95717
Summary
DFG GetByVal for JSArrays shouldn't OSR exit every time that the index is out...
Filip Pizlo
Reported
2012-09-04 00:48:28 PDT
If profiling tells us that the access may be out of bounds, then we shouldn't speculate that it's in bounds.
Attachments
the patch
(13.13 KB, patch)
2012-09-04 00:54 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-09-04 00:54:32 PDT
Created
attachment 161981
[details]
the patch
Filip Pizlo
Comment 2
2012-09-04 14:17:17 PDT
Landed in
http://trac.webkit.org/changeset/127503
Tim Horton
Comment 3
2012-09-04 15:29:41 PDT
This seems to have caused some failures in fast/js tests; see
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r127507%20(567)/results.html
Per pizlo, I'm going to roll it out.
WebKit Review Bot
Comment 4
2012-09-04 15:29:49 PDT
Re-opened since this is blocked by 95788
Filip Pizlo
Comment 5
2012-09-04 18:35:46 PDT
Relanded with fixes in
http://trac.webkit.org/changeset/127536
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug