third_party/WebKit/Source/JavaScriptCore/bytecode/DFGExitProfile.h
@@ -59,6 +59,8 @@ inline const char* exitKindToString(ExitKind kind)
         return "Overflow";
     case NegativeZero:
         return "NegativeZero";
+    case OutOfBounds:
+        return "OutOfBounds";
     case InadequateCoverage:
         return "InadequateCoverage";
     case ArgumentsEscaped:
